# fantome-iv

./: .gitignore  BOM.md  DECISIONS.md  DOCUMENTATION.md  Fantome-IV-specs.md  HARDWARE-REFERENCE.md  LICENSE  LICENSE-CONTENT.md  LISTE-COURSES.md  PHASE-0-AUDIT.md  README.md  ROADMAP.md  SCHEMA-SPEC.md  UI-UX-SPEC.md  index.html
docs/: ALIMENTATION-POWER-SPEC.md  AUDIO-OUT-SPEC.md  BOM.md  CODE-AUDIT.md  COMPONENT-REFERENCES.md  DECISIONS.md  DOCUMENTATION.md  Fantome-IV-specs.md  HARDWARE-REFERENCE.md  INSTALLATION-MATERIEL.md  LISTE-COURSES.md  MECHANICAL-SPEC.md  (+9 more)
firmware/: CMakeLists.txt  README.md
firmware/core/include/fantome/: Effects.h  FantomeEngine.h  FirmwareRuntime.h  HardwareIO.h  MidiTypes.h  Modulation.h  OledView.h  Patch.h  PatchSerialization.h  PortableInput.h  PresetPersistence.h  SessionManager.h  SessionPersistence.h  StartupDisplay.h  SynthVoice.h  UiState.h  VoiceAllocator.h
firmware/core/src/: Effects.cpp  FantomeEngine.cpp  FirmwareRuntime.cpp  HardwareIO.cpp  Modulation.cpp  OledView.cpp  PatchSerialization.cpp  PortableInput.cpp  PresetPersistence.cpp  SessionManager.cpp  SessionPersistence.cpp  StartupDisplay.cpp  SynthVoice.cpp  UiState.cpp  VoiceAllocator.cpp
firmware/targets/daisy/: DaisyApp.cpp  DaisyApp.h  DaisyPeripherals.cpp  DaisyPeripherals.h  DaisyPlatform.h  DaisyPlatformStub.cpp  DaisyPlatformStub.h  DaisySessionStore.cpp  DaisySessionStore.h  DaisyTargetConfig.cpp  DaisyTargetConfig.h  LibDaisyPlatform.cpp  LibDaisyPlatform.h  README.md  main.cpp
firmware/targets/desktop/: main.cpp
firmware/tests/: test_main.cpp
